--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/general.css">
+    <link rel="stylesheet" href="/css/queries.css">
     <title>Website for candles</title>
 </head>
 <body>
@@ -25,6 +26,10 @@
                 <li><a class="main-nav-link nav-cta" href="#section-cta">Contact Us</a></li>
             </ul>
         </nav>
+        <button class="btn-mobile-nav">
+            <ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon>
+            <ion-icon name="close-outline"  class="icon-mobile-nav"></ion-icon>
+        </button>
     </header>
     <main>
     <section class="section-hero" id="section-hero">
@@ -103,7 +108,7 @@
                     High quality, creamy finish designed to have a good scent throw
                 </p>
             </div>
-            <div class="services-item center-text">
+            <div class="services-item center-text grid-item-center">
                 <i class="fas fa-leaf services-icon"></i>
                 <h4 class="heading-quaternary">Sustainable</h4>
                 <p class="services-text">
@@ -276,7 +281,7 @@
                 </div>
                 </div>
             </div>
-            <div class="candle">
+            <div class="candle grid-item-center">
                 <img src="/img/set of two candles.jpeg" 
                 class="candle-img"
                 alt="card for fresh bamboo candle">
