--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <title>Website for candles</title>
 </head>
 <body>
-    <main class="main-page">
-    <header class="header">
+    <header class="header sticky">
         <img src="/img/logo.webp" class="logo" alt="logo image">
         <nav class="main-nav">
             <ul class="main-nav-list">
@@ -31,7 +30,6 @@
             <ion-icon name="close-outline"  class="icon-mobile-nav"></ion-icon>
         </button>
     </header>
-    <main>
     <section class="section-hero" id="section-hero">
         <div class="hero">
         <div class="hero-text-box">
@@ -64,7 +62,6 @@
         </div>
     </div>
     </section>
-    </main>
     <section class="section-about" id="section-about">
         <div class="container center-text">
             <span class="subheading">
@@ -409,7 +406,7 @@
     </section>
     <section class="section-cta" id="section-cta">
         <div class="container grid grid--2-cols">
-            <div class="">
+            <div class="links-box">
                 <h3 class="heading-tertiary">
                     Quick links
                 </h3>
