--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/general.css">
-    <link rel="stylesheet" href="/css/queries.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="./css/queries.css">
+  
     <title>Website for candles</title>
 </head>
 <body>
     <header class="header sticky">
-        <img src="/img/logo.webp" class="logo" alt="logo image">
+        <img src="./img/logo.webp" class="logo" alt="logo image">
         <nav class="main-nav">
             <ul class="main-nav-list">
                 <li><a class="main-nav-link" href="#section-hero">Home</a></li>
@@ -43,12 +44,12 @@
             <button href="#section-cta" class="btn btn--outline">Learn more &darr;</button>
             <div class="delivered-candles">
                 <div class="delivered-faces">
-                    <img src="/img/custumer-1.webp" alt="custumer photo">
-                    <img src="/img/custumer-3.jpeg" alt="custumer photo">
-                    <img src="/img/custumer-6.jpeg" alt="custumer photo">
-                    <img src="/img/custumer-2.webp" alt="custumer photo">
-                    <img src="/img/custumer-4.webp" alt="custumer photo">
-                    <img src="/img/custumer-5.jpeg" alt="custumer photo">
+                    <img src="./img/custumer-1.webp" alt="custumer photo">
+                    <img src="./img/custumer-3.jpeg" alt="custumer photo">
+                    <img src="./img/custumer-6.jpeg" alt="custumer photo">
+                    <img src="./img/custumer-2.webp" alt="custumer photo">
+                    <img src="./img/custumer-4.webp" alt="custumer photo">
+                    <img src="./img/custumer-5.jpeg" alt="custumer photo">
                 </div>
                 <div class="delivered-text">
                     <span>180,000</span> candles delivered last year
@@ -56,7 +57,7 @@
             </div>
         </div>
         <div class="hero-img-box">
-            <img src="/img/hero.jpeg"
+            <img src="./img/hero.jpeg"
             class="hero-img" 
             alt="cover image of candle for hero section">
         </div>
@@ -144,7 +145,7 @@
                     </p>
                 </div>
                 <div class="step-img-box">
-                    <img src="/img/fresh-bamboo.jpeg" 
+                    <img src="./img/fresh-bamboo.jpeg" 
                     class="step-img"
                     alt="Fresh bamboo candle">
                 </div>
@@ -153,7 +154,7 @@
         <div class="operations__content operations__content--2">
             <div class="grid grid--2-cols grid--center-v container">
                 <div class="step-img-box">
-                    <img src="/img/lavander.jpeg" 
+                    <img src="./img/lavander.jpeg" 
                     class="step-img"
                     alt="lavander candle">
                 </div>
@@ -186,7 +187,7 @@
                     </p>
                 </div>
                 <div class="step-img-box">
-                    <img src="/img/set of two candles.jpeg" 
+                    <img src="./img/set of two candles.jpeg" 
                     class="step-img"
                     alt="set of two candles">
                 </div>
@@ -200,15 +201,15 @@
             </h2>
         </div>
         <div class="container grid-gallery">
-            <img src="/img/fresh-bamboo.jpeg" alt=""
+            <img src="./img/fresh-bamboo.jpeg" alt=""
             class="gallery-img">
-            <img src="/img/lavander.jpeg" alt=""
+            <img src="./img/lavander.jpeg" alt=""
             class="gallery-img">
-            <img src="/img/hero.jpeg" alt=""
+            <img src="./img/hero.jpeg" alt=""
             class="gallery-img">
-            <img src="/img/set of two candles.jpeg" alt=""
+            <img src="./img/set of two candles.jpeg" alt=""
             class="gallery-img">
-            <img src="/img/candles.jpeg" alt=""
+            <img src="./img/candles.jpeg" alt=""
             class="gallery-img">
         </div>
     </section>
@@ -219,7 +220,7 @@
         </div>
         <div class="container grid grid--3-cols">
             <div class="candle">
-                <img src="/img/fresh-bamboo.jpeg" 
+                <img src="./img/fresh-bamboo.jpeg" 
                 class="candle-img"
                 alt="card for fresh bamboo candle">
                 <div class="candle-content">
@@ -249,7 +250,7 @@
                 </div>
             </div>
             <div class="candle">
-                <img src="/img/lavander.jpeg" 
+                <img src="./img/lavander.jpeg" 
                 class="candle-img"
                 alt="card for fresh bamboo candle">
                 <div class="candle-content">
@@ -279,7 +280,7 @@
                 </div>
             </div>
             <div class="candle grid-item-center">
-                <img src="/img/set of two candles.jpeg" 
+                <img src="./img/set of two candles.jpeg" 
                 class="candle-img"
                 alt="card for fresh bamboo candle">
                 <div class="candle-content">
@@ -322,7 +323,7 @@
                     <div class="testimonial-container testimonial-container--1 testimonial-container--active">
                         <div class="progress-bar"></div>
                         <div class="testimonial-img-container">
-                            <img src="/img/custumer-2.webp" 
+                            <img src="./img/custumer-2.webp" 
                             class="testimonial-img"
                             alt="custumer for testimonial">
                         </div>
@@ -341,7 +342,7 @@
                     <div class="testimonial-container testimonial-container--2">
                         <div class="progress-bar"></div>
                         <div class="testimonial-img-container">
-                            <img src="/img/custumer-3.jpeg" 
+                            <img src="./img/custumer-3.jpeg" 
                             class="testimonial-img"
                             alt="custumer for testimonial">
                         </div>
@@ -360,7 +361,7 @@
                     <div class="testimonial-container testimonial-container--3">
                         <div class="progress-bar"></div>
                         <div class="testimonial-img-container">
-                            <img src="/img/custumer-4.webp" 
+                            <img src="./img/custumer-4.webp" 
                             class="testimonial-img"
                             alt="custumer for testimonial">
                         </div>
@@ -379,7 +380,7 @@
                     <div class="testimonial-container testimonial-container--4">
                         <div class="progress-bar"></div>
                         <div class="testimonial-img-container">
-                            <img src="/img/custumer-5.jpeg" 
+                            <img src="./img/custumer-5.jpeg" 
                             class="testimonial-img"
                             alt="custumer for testimonial">
                         </div>
@@ -452,7 +453,6 @@
             </div>
         </footer>
     </section>
-    </main>
     <script src="/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
